# M08-PS6

./: .gitignore  README.md
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cg/lib/cg/: edit  maze  test
install/cg/share/cg/: package.sh
install/cg_interfaces/include/cg_interfaces/cg_interfaces/msg/: robot_sensors.h  robot_sensors.hpp  rosidl_generator_cpp__visibility_control.hpp
install/cg_interfaces/include/cg_interfaces/cg_interfaces/msg/detail/: robot_sensors__builder.hpp  robot_sensors__description.c  robot_sensors__functions.c  robot_sensors__functions.h  robot_sensors__rosidl_typesupport_fastrtps_c.h  robot_sensors__rosidl_typesupport_fastrtps_cpp.hpp  robot_sensors__rosidl_typesupport_introspection_c.h  robot_sensors__rosidl_typesupport_introspection_cpp.hpp  robot_sensors__struct.h  robot_sensors__struct.hpp  robot_sensors__traits.hpp  robot_sensors__type_support.c  robot_sensors__type_support.cpp  robot_sensors__type_support.h  robot_sensors__type_support.hpp
install/cg_interfaces/include/cg_interfaces/cg_interfaces/srv/: get_map.hpp  move_cmd.hpp  reset.h  reset.hpp
install/cg_interfaces/include/cg_interfaces/cg_interfaces/srv/detail/: get_map__builder.hpp  get_map__description.c  get_map__functions.c  get_map__functions.h  get_map__rosidl_typesupport_fastrtps_c.h  get_map__rosidl_typesupport_fastrtps_cpp.hpp  get_map__rosidl_typesupport_introspection_c.h  get_map__rosidl_typesupport_introspection_cpp.hpp  get_map__struct.h  get_map__struct.hpp  get_map__traits.hpp  get_map__type_support.c  get_map__type_support.cpp  get_map__type_support.h  get_map__type_support.hpp  move_cmd__builder.hpp  move_cmd__description.c  move_cmd__functions.c  move_cmd__functions.h  move_cmd__rosidl_typesupport_fastrtps_c.h  move_cmd__rosidl_typesupport_fastrtps_cpp.hpp  move_cmd__rosidl_typesupport_introspection_c.h  move_cmd__rosidl_typesupport_introspection_cpp.hpp  move_cmd__struct.h  move_cmd__struct.hpp  move_cmd__traits.hpp  move_cmd__type_support.c  move_cmd__type_support.cpp  move_cmd__type_support.h  move_cmd__type_support.hpp  reset__builder.hpp  reset__description.c  reset__functions.c  reset__functions.h  reset__rosidl_typesupport_fastrtps_c.h  reset__rosidl_typesupport_fastrtps_cpp.hpp  reset__rosidl_typesupport_introspection_c.h  reset__rosidl_typesupport_introspection_cpp.hpp  (+7 more)
install/cg_interfaces/share/ament_index/resource_index/parent_prefix_path/: cg_interfaces
install/cg_interfaces/share/ament_index/resource_index/rosidl_interfaces/: cg_interfaces
install/cg_interfaces/share/cg_interfaces/: local_setup.sh  package.dsv  package.ps1  package.sh
install/cg_interfaces/share/cg_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  cg_interfacesConfig.cmake  cg_interfaces__rosidl_typesupport_cExport-noconfig.cmake  cg_interfaces__rosidl_typesupport_cExport.cmake  cg_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  cg_interfaces__rosidl_typesupport_cppExport.cmake  cg_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  cg_interfaces__rosidl_typesupport_introspection_cExport.cmake  cg_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  cg_interfaces__rosidl_typesupport_introspection_cppExport.cmake  export_cg_interfaces__rosidl_generator_cExport-noconfig.cmake  export_cg_interfaces__rosidl_generator_cExport.cmake  export_cg_interfaces__rosidl_generator_cppExport.cmake  export_cg_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_cg_interfaces__rosidl_generator_pyExport.cmake  export_cg_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_cg_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_cg_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_cg_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/cg_interfaces/share/cg_interfaces/msg/: RobotSensors.idl  RobotSensors.json
install/cg_interfaces/share/cg_interfaces/srv/: GetMap.json  MoveCmd.idl  MoveCmd.json  Reset.idl  Reset.json
install/cg_teleop/lib/cg_teleop/: teleop_keyboard
install/cg_teleop/share/cg_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/part1/lib/part1/: main
install/part1/share/ament_index/resource_index/parent_prefix_path/: part1
install/part1/share/part1/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/part1/share/part1/cmake/: part1Config.cmake
install/ponderada/include/: Robot.hpp
install/ponderada/lib/ponderada/: solution  solution_tester
install/ponderada/share/ament_index/resource_index/package_run_dependencies/: ponderada
install/ponderada/share/ament_index/resource_index/parent_prefix_path/: ponderada
install/ponderada/share/ponderada/: local_setup.sh  package.sh
install/ponderada/share/ponderada/cmake/: ponderadaConfig.cmake
install/ponderada2/include/: Dfs_explorer.hpp  DynamicMap.hpp  Explorer.hpp  Map_builder.hpp  Mapa.hpp  Robot.hpp  Types.hpp  types.hpp
install/ponderada2/lib/ponderada2/: explore_main  maze_solver  ponderada2_explorer
install/ponderada2/share/ament_index/resource_index/package_run_dependencies/: ponderada2
install/ponderada2/share/ponderada2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ponderada2/share/ponderada2/cmake/: ponderada2Config.cmake
src/part1/: CMakeLists.txt  package.xml
src/part1/include/: Algoritmo.hpp  Mapa.hpp  Robo.hpp
src/part1/src/: Algoritmo.cpp  Main.cpp  Mapa.cpp  Robo.cpp
src/ponderada/: CMakeLists.txt  package.xml
src/ponderada/include/: Mapa.hpp  Pathfinder.hpp  Robot.hpp  Solution.hpp
src/ponderada/src/: Mapa.cpp  Pathfinder.cpp  Robot.cpp  Solution.cpp  main.cpp
src/ponderada2/: CMakeLists.txt  package.xml
src/ponderada2/include/: pathfinding.hpp  robot.hpp  sensor_data.hpp
src/ponderada2/src/: main_solver.cpp  pathfinding.cpp  robot.cpp
